Incorporate updates made while repo was disconnected